new renewal workflow, add newRecordYear and pull from new endpoint to get most recent permit record data

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="col-12">
         <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/add-record">
-            <span class="fas fa-plus"></span> New Annual Record </a>
+            <span class="fas fa-plus"></span> Create Renewal </a>
     </div>
 </div>
 <div class="row mt-4 container">
