--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
@@ -17,7 +17,7 @@
     <app-alert-display></app-alert-display>
     <div class="row mt-2">
         <div class="col-12">
-            <h2 class="d-inline-block">New Annual Record</h2>
+            <h2 class="d-inline-block">New Annual Record: Renewal for {{newRecordYear}}</h2>
         </div>
 
     </div>
